# threeD

./: .gitignore  CMakeLists.txt  readme.md
inc/: lexer.hpp  token.hpp
src/: lexer.cpp
tests/: CMakeLists.txt  test.cpp
tests/cases/: case1.out  case2.out  case2.tds
